--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@
 ::placeholder{
   color: #FFFFFF !important;
 }
+.contactUs{
+  font-weight: bold;
+  font-size: x-large;
+}
 @media only screen and (max-width:600px) {
   .portfolio{
     padding-right: 0;
