--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,16 @@
     padding: 0;
   }
 }
+@media only screen and (min-width:580px) and (max-width:820px) {
+  .hoverText{
+    padding: 0;
+    font-size: small !important;
+
+  }
+}
+@media only screen and (width:1024px)
+{
+  .hoverText{
+    padding: 0.5rem;
+  }
+}
